--- a/node/package.json
+++ b/node/package.json
@@ -15,10 +15,12 @@
   "author": "Facebook",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.15.0",
     "config": "^1.20.4",
     "ejs": "^2.4.2",
     "express": "^4.13.4",
+    "query-string": "^6.4.2",
     "request": "^2.72.0"
   },
   "engines": {
